# inframodeler

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
poc/: inframodeler-prototyp.html
req/: anforderungsdokument-inframodeler.md  technisches-konzept-inframodeler.md
src/: main.ts  styles.css  vendor.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: AppController.ts  DocumentSession.ts  EmptyCanvasHelp.ts  PlantUmlImportDialog.ts  RecentFiles.ts  Recovery.ts  RecoveryDialog.ts  UnsavedChangesDialog.ts
src/app/export/: exportBounds.ts  exportFonts.ts  exportSvg.ts
src/app/platform/: BrowserPlatform.ts  PlatformAdapter.ts  TauriPlatform.ts
src/app/serialization/: errors.ts  exportDiagram.ts  format.ts  importDiagram.ts  migrate.ts  parse.ts  stringify.ts
src/editor/: InfraModeler.ts  demo.ts
src/editor/infra/: InfraAutoPlace.ts  (+20 more)
test/: DocumentSession.test.ts  InfraAutoPlace.test.ts  InfraElementFactory.test.ts  InfraRenderer.test.ts  InfraRules.test.ts  Recovery.test.ts  connectionRouting.test.ts  elementHierarchy.test.ts  orthoRouter.test.ts  routingFixture.test.ts
test/e2e/: export.spec.ts  m2.spec.ts  plantuml.spec.ts  rendering.spec.ts
test/export/: exportBounds.test.ts
test/meta/: containment.test.ts  edgeDefaults.test.ts
test/plantuml/: plantUmlImport.test.ts  repositionMiddleware.test.ts
test/serialization/: serialization.test.ts
(+14 files in other folders)
