[package]
name = "inframodeler"
version = "0.1.0"
description = "A specialized editor for deployment and infrastructure diagrams"
authors = ["aweber10"]
license = "MIT"
repository = "https://github.com/aweber10/inframodeler"
edition = "2021"

[lib]
name = "inframodeler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
